--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -15,12 +15,20 @@
           <% end %>
         </div>
         <br>
+        進行状況
+        <div class="progress" style="width: 40%;">
+          <div class="progress-bar progress-bar-striped active" id="progress_bar" role="progressbar" style="width: 0%;">
+            <%= ((@account.current_item_num * 100) / @account.max_item_num).round(0) %>%
+          </div>
+        </div>
+
+        <br>
         <h5>取得済み件数　全<%= @items.count.to_i %>件</h5>
         <table class="table table-striped table-hover table-bordered ellipsis" id="item_table">
           <thead class="thead-light">
             <tr>
               <% @headers.each do |key, value| %>
-              <th><%= value %></th>
+              <th style="text-align:center;"><%= value %></th>
               <% end %>
             </tr>
           </thead>
@@ -28,7 +36,16 @@
             <% @items.each do |temp| %>
             <tr>
               <% @headers.each do |key, value| %>
-              <th><%= temp[key] %></th>
+                <% case key %>
+                <% when :image then %>
+                <td class="td_vertical_align_middle"><%= image_tag(temp[key], height:'70px') %></td>
+                <% when :shop_id then %>
+                <td class="td_vertical_align_middle"><%= temp.shop.name %></td>
+                <% when :url then %>
+                <td class="td_vertical_align_middle"><%= link_to temp[key], temp[key], target: '_blank' %></td>
+                <% else %>
+                <td class="td_vertical_align_middle"><%= temp[key] %></td>
+                <% end %>
               <% end %>
             </tr>
             <% end %>
