--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,10 @@
         white-space: nowrap;
       }
 
+      .td_vertical_align_middle.td_vertical_align_middle {
+        vertical-align: middle;
+      }
+
     }
     </style>
   </head>
@@ -79,12 +83,7 @@
                   各種設定
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/products/edit">商品マスタ</a>
-                  <a class="dropdown-item" href="/materials/edit">素材マスタ</a>
-                  <a class="dropdown-item" href="/recipes/edit">レシピマスタ</a>
-                  <a class="dropdown-item" href="/categories/edit">素材カテゴリーマスタ</a>
-                  <a class="dropdown-item" href="/sellers/edit">販売店舗マスタ</a>
-                  <a class="dropdown-item" href="/suppliers/edit">仕入れ先マスタ</a>
+                  <a class="dropdown-item" href="#">アカウント設定</a>
                 </div>
               </li>
 
