--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -83,7 +83,7 @@
                   各種設定
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">アカウント設定</a>
+                  <a class="dropdown-item" href="/accounts/setup">アカウント設定</a>
                 </div>
               </li>
 
