--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,14 @@
         white-space: nowrap;
       }
 
+      th {
+        text-align:center;
+      }
+
+      td {
+        text-align:center;
+      }
+
       .td_vertical_align_middle.td_vertical_align_middle {
         vertical-align: middle;
       }
