--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -28,31 +28,49 @@
         <table class="table table-striped table-hover table-bordered ellipsis" id="item_table">
           <thead class="thead-light">
             <tr>
-              <th style="text-align:center;">出品</th>
-              <th style="text-align:center;">候補ASIN</th>
-              <th style="text-align:center;">アマゾン画像</th>
-              <% @headers.each do |key, value| %>
-              <th style="text-align:center;"><%= value %></th>
-              <% end %>
+              <th>No.</th>
+              <th>タイプ</th>
+              <th>出品</th>
+              <th>画像</th>
+              <th>価格</th>
+              <th>価格差</th>
+              <th>商品名</th>
+              <th>商品番号</th>
+              <th>JAN</th>
             </tr>
           </thead>
           <tbody>
-            <% @items.each do |temp| %>
+            <% @items.each_with_index do |temp, index| %>
             <tr>
-              <td class="td_vertical_align_middle"></td>
-              <td class="td_vertical_align_middle"><%= if @converter.find_by(original_key: temp.item.jan) != nil then @converter.find_by(original_key: temp.item.jan).product_id else nil end %></td>
-              <td class="td_vertical_align_middle"></td>
-              <% @headers.each do |key, value| %>
-                <% case key %>
-                <% when :image then %>
-                <td class="td_vertical_align_middle"><%= if temp.item[key] != nil then image_tag(temp.item[key], height:'70px') end %></td>
-                <% when :shop_id then %>
-                <td class="td_vertical_align_middle"><%= temp.item.shop.name %></td>
-                <% when :url then %>
-                <td class="td_vertical_align_middle"><%= link_to temp.item[key], temp.item[key], target: '_blank' %></td>
-                <% else %>
-                <td class="td_vertical_align_middle"><%= temp.item[key] %></td>
-                <% end %>
+              <td class="td_vertical_align_middle" rowspan="2"><%= index + 1 %></td>
+              <td class="td_vertical_align_middle">楽天市場</td>
+              <td class="td_vertical_align_middle" rowspan="2"></td>
+              <td class="td_vertical_align_middle" style="padding:1px;"><%= if temp.item.image != nil then image_tag(temp.item.image, height:'40px') end %></td>
+              <% if temp.item.converter != nil then %>
+                <% amazon_price = temp.item.converter.product.new_price + temp.item.converter.product.new_shipping - temp.item.converter.product.new_point %>
+                <% profit = (amazon_price * 0.9 - temp.item.price).to_i %>
+              <% else %>
+              <% end %>
+              <td class="td_vertical_align_middle"><%= temp.item.price %></td>
+              <td class="td_vertical_align_middle" rowspan="2"><%= profit %></td>
+              <td class="td_vertical_align_middle"><%= link_to truncate(temp.item.name), temp.item.url,  target: '_blank' %></td>
+              <td class="td_vertical_align_middle"><%= temp.item.item_id %></td>
+              <td class="td_vertical_align_middle" rowspan="2"><%= temp.item.jan %></td>
+            </tr>
+            <tr>
+              <td class="td_vertical_align_middle">アマゾン</td>
+
+              <% if temp.item.converter != nil then %>
+                <% amazon_price = temp.item.converter.product.new_price + temp.item.converter.product.new_shipping - temp.item.converter.product.new_point %>
+                <td class="td_vertical_align_middle" style="padding:1px;"><%= if temp.item.converter.product.image != nil then image_tag(temp.item.converter.product.image, height:'40px') end %></td>
+                <td class="td_vertical_align_middle"><%= amazon_price %></td>
+                <td class="td_vertical_align_middle"><%= link_to truncate(temp.item.converter.product.name), temp.item.converter.product.url,  target: '_blank' %></td>
+                <td class="td_vertical_align_middle"><%= temp.item.converter.product.product_id %></td>
+              <% else %>
+                <td class="td_vertical_align_middle"></td>
+                <td class="td_vertical_align_middle"></td>
+                <td class="td_vertical_align_middle"></td>
+                <td class="td_vertical_align_middle"></td>
               <% end %>
             </tr>
             <% end %>
