--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -10,21 +10,22 @@
                 <label>検索用キーワード</label>
                 <%= text_field_tag('input_key', nil,  class: 'form-control', style: 'margin-left:10px; margin-right:20px;') %>
               </div>
-              <%= submit_tag '取得開始', class: 'btn btn-info' %>
+              <%= submit_tag '取得開始', class: 'btn btn-info',style: 'margin-left:10px; margin-right:20px;' %>
             </div>
           <% end %>
+          <%= form_tag('/items/select', method:'post', id:'update_form') do %>
+          <%= submit_tag '出品候補選択', class: 'btn btn-primary' %>
         </div>
         <br>
-        進行状況
+
+        <h5 style="display:inline;">取得済み件数　全<%= @total.to_i %>件</h5>
         <div class="progress" style="width: 60%;">
           <div class="progress-bar progress-bar-striped active" id="progress_bar" role="progressbar" style="width: <%= ((@account.current_item_num * 100) / @account.max_item_num).round(0) %>%;">
             <%= ((@account.current_item_num * 100) / @account.max_item_num).round(0) %>%
           </div>
         </div>
-
-        <br>
-        <h5>取得済み件数　全<%= @total.to_i %>件</h5>
         <%= paginate @items %>
+
         <table class="table table-striped table-hover table-bordered ellipsis" id="item_table">
           <thead class="thead-light">
             <tr>
@@ -42,30 +43,33 @@
           <tbody>
             <% @items.each_with_index do |temp, index| %>
             <tr>
+              <% check_status = false %>
+              <% if temp.status == 'before_listing' then check_status = true end %>
               <td class="td_vertical_align_middle" rowspan="2"><%= index + 1 %></td>
               <td class="td_vertical_align_middle">楽天市場</td>
-              <td class="td_vertical_align_middle" rowspan="2"></td>
+              <td class="td_vertical_align_middle" rowspan="2"><%= check_box_tag 'checked[' + temp.item_id + ']', true, check_status, :style => 'width: 20px; height: 20px;' %></td>
               <td class="td_vertical_align_middle" style="padding:1px;"><%= if temp.item.image != nil then image_tag(temp.item.image, height:'40px') end %></td>
-              <% if temp.item.converter != nil then %>
-                <% amazon_price = temp.item.converter.product.new_price + temp.item.converter.product.new_shipping - temp.item.converter.product.new_point %>
-                <% profit = (amazon_price * 0.9 - temp.item.price).to_i %>
-              <% else %>
-              <% end %>
               <td class="td_vertical_align_middle"><%= temp.item.price %></td>
-              <td class="td_vertical_align_middle" rowspan="2"><%= profit %></td>
+              <td class="td_vertical_align_middle" rowspan="2"><%= temp.profit %></td>
               <td class="td_vertical_align_middle"><%= link_to truncate(temp.item.name), temp.item.url,  target: '_blank' %></td>
               <td class="td_vertical_align_middle"><%= temp.item.item_id %></td>
               <td class="td_vertical_align_middle" rowspan="2"><%= temp.item.jan %></td>
             </tr>
             <tr>
               <td class="td_vertical_align_middle">アマゾン</td>
-
               <% if temp.item.converter != nil then %>
-                <% amazon_price = temp.item.converter.product.new_price + temp.item.converter.product.new_shipping - temp.item.converter.product.new_point %>
-                <td class="td_vertical_align_middle" style="padding:1px;"><%= if temp.item.converter.product.image != nil then image_tag(temp.item.converter.product.image, height:'40px') end %></td>
-                <td class="td_vertical_align_middle"><%= amazon_price %></td>
-                <td class="td_vertical_align_middle"><%= link_to truncate(temp.item.converter.product.name), temp.item.converter.product.url,  target: '_blank' %></td>
-                <td class="td_vertical_align_middle"><%= temp.item.converter.product.product_id %></td>
+                <% if temp.item.converter.product != nil then %>
+                  <% amazon_price = temp.item.converter.product.new_price + temp.item.converter.product.new_shipping - temp.item.converter.product.new_point %>
+                  <td class="td_vertical_align_middle" style="padding:1px;"><%= if temp.item.converter.product.image != nil then image_tag(temp.item.converter.product.image, height:'40px') end %></td>
+                  <td class="td_vertical_align_middle"><%= amazon_price %></td>
+                  <td class="td_vertical_align_middle"><%= link_to truncate(temp.item.converter.product.name), temp.item.converter.product.url,  target: '_blank' %></td>
+                  <td class="td_vertical_align_middle"><%= temp.item.converter.product.product_id %></td>
+                <% else %>
+                  <td class="td_vertical_align_middle"></td>
+                  <td class="td_vertical_align_middle"></td>
+                  <td class="td_vertical_align_middle"></td>
+                  <td class="td_vertical_align_middle"></td>
+                <% end %>
               <% else %>
                 <td class="td_vertical_align_middle"></td>
                 <td class="td_vertical_align_middle"></td>
@@ -76,6 +80,7 @@
             <% end %>
           </tbody>
         </table>
+        <% end %>
       </div>
     </div>
   </div>
