--- a/app/views/products/check.html.erb
+++ b/app/views/products/check.html.erb
@@ -6,69 +6,35 @@
         <div class="form-inline">
           <%= form_tag('/products/check', method:'post', id:'product_check') do %>
             <div class="form-inline">
-              <%= submit_tag '出品', class: 'btn btn-info',style: 'margin-left:10px; margin-right:20px;' %>
+              <%= submit_tag 'MWSアップロード', class: 'btn btn-info',style: 'margin-right:20px;' %>
+              <%= link_to "txtファイル出力", products_csv_download_path(format: :csv), class: "btn btn-primary" %>
             </div>
           <% end %>
         </div>
         <br>
 
-        <h5>対象件数　全<%= @total.to_i %>件</h5>
+        <h5>対象件数　全<%= @items.count.to_i %>件</h5>
 
         <table class="table table-striped table-hover table-bordered ellipsis" id="item_table">
           <thead class="thead-light">
+            <% @headers.each do |row| %>
             <tr>
-              <th>No.</th>
-              <th>タイプ</th>
-              <th>出品</th>
-              <th>画像</th>
-              <th>価格</th>
-              <th>価格差</th>
-              <th>商品名</th>
-              <th>商品番号</th>
-              <th>JAN</th>
+              <% row.each do |col| %>
+              <th><%= col %></th>
+              <% end %>
             </tr>
+            <% end %>
           </thead>
           <tbody>
-            <% @items.each_with_index do |temp, index| %>
+            <% @body.each do |row| %>
             <tr>
-              <% check_status = false %>
-              <% if temp.status == 'before_listing' then check_status = true end %>
-              <td class="td_vertical_align_middle" rowspan="2"><%= index + 1 %></td>
-              <td class="td_vertical_align_middle">楽天市場</td>
-              <td class="td_vertical_align_middle" rowspan="2"><%= check_box_tag 'checked[' + temp.item_id + ']', true, check_status, :style => 'width: 20px; height: 20px;' %></td>
-              <td class="td_vertical_align_middle" style="padding:1px;"><%= if temp.item.image != nil then image_tag(temp.item.image, height:'40px') end %></td>
-              <td class="td_vertical_align_middle"><%= temp.item.price %></td>
-              <td class="td_vertical_align_middle" rowspan="2"><%= temp.profit %></td>
-              <td class="td_vertical_align_middle"><%= link_to truncate(temp.item.name), temp.item.url,  target: '_blank' %></td>
-              <td class="td_vertical_align_middle"><%= temp.item.item_id %></td>
-              <td class="td_vertical_align_middle" rowspan="2"><%= temp.item.jan %></td>
-            </tr>
-            <tr>
-              <td class="td_vertical_align_middle">アマゾン</td>
-              <% if temp.item.converter != nil then %>
-                <% if temp.item.converter.product != nil then %>
-                  <% amazon_price = temp.item.converter.product.new_price + temp.item.converter.product.new_shipping - temp.item.converter.product.new_point %>
-                  <td class="td_vertical_align_middle" style="padding:1px;"><%= if temp.item.converter.product.image != nil then image_tag(temp.item.converter.product.image, height:'40px') end %></td>
-                  <td class="td_vertical_align_middle"><%= amazon_price %></td>
-                  <td class="td_vertical_align_middle"><%= link_to truncate(temp.item.converter.product.name), temp.item.converter.product.url,  target: '_blank' %></td>
-                  <td class="td_vertical_align_middle"><%= temp.item.converter.product.product_id %></td>
-                <% else %>
-                  <td class="td_vertical_align_middle"></td>
-                  <td class="td_vertical_align_middle"></td>
-                  <td class="td_vertical_align_middle"></td>
-                  <td class="td_vertical_align_middle"></td>
-                <% end %>
-              <% else %>
-                <td class="td_vertical_align_middle"></td>
-                <td class="td_vertical_align_middle"></td>
-                <td class="td_vertical_align_middle"></td>
-                <td class="td_vertical_align_middle"></td>
+              <% @headers[2].each do |col| %>
+              <td class="td_vertical_align_middle"><%= row[col] %></td>
               <% end %>
             </tr>
             <% end %>
           </tbody>
         </table>
-        <% end %>
       </div>
     </div>
   </div>
