--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -8,11 +8,13 @@
             <div class="form-inline">
               <div class="form-group">
                 <label>検索用キーワード</label>
-                <%= text_field_tag('input_key', nil,  class: 'form-control', style: 'margin-left:10px; margin-right:20px;') %>
+                <%= text_field_tag('input_key', @search_condition.keyword,  class: 'form-control', style: 'margin-left:10px; margin-right:20px;') %>
               </div>
+              <%= link_to '詳細設定', rakuten_searches_setup_path, style: 'margin-right:10px;' %>
               <%= submit_tag '取得開始', class: 'btn btn-info',style: 'margin-left:10px; margin-right:20px;' %>
             </div>
           <% end %>
+
           <%= form_tag('/items/select', method:'post', id:'update_form') do %>
           <%= submit_tag '出品候補選択', class: 'btn btn-primary' %>
         </div>
