--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,6 +91,7 @@
                   各種設定
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="/rakuten_searches/setup">検索条件設定</a>
                   <a class="dropdown-item" href="/list_templates/setup">出品テンプレート設定</a>
                   <a class="dropdown-item" href="/accounts/setup">アカウント設定</a>
                 </div>
