--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,7 +96,9 @@
                   <a class="dropdown-item" href="/accounts/setup">アカウント設定</a>
                 </div>
               </li>
-
+              <li class="nav-item">
+                <a href="/lists/show" class="nav-link">在庫管理</a>
+              </li>
               <li class="nav-item">
                 <a href="/users/sign_out" class="nav-link">ログアウト</a>
               </li>
