--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,6 +92,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="/rakuten_searches/setup">検索条件設定</a>
+                  <a class="dropdown-item" href="/prices/edit">販売価格設定</a>
                   <a class="dropdown-item" href="/list_templates/setup">出品テンプレート設定</a>
                   <a class="dropdown-item" href="/accounts/setup">アカウント設定</a>
                 </div>
