--- a/app/views/rakuten_searches/setup.html.erb
+++ b/app/views/rakuten_searches/setup.html.erb
@@ -1,12 +1,11 @@
 <div class="container">
   <div class="page-header" id="banner">
     <div class="row my-4">
-      <div class="col-lg-10 col-md-10">
+      <div class="col-lg-6">
         <h2>楽天検索条件の設定</h2>
         <%= form_for(@rakuten_search, {url: rakuten_searches_setup_path, method: 'post'}) do |f| %>
-          <div class="actions">
-            <%= submit_tag '検索条件設定', class: 'btn btn-info', style: 'margin-top:10px;' %>
-          </div><br>
+          <%= submit_tag '検索条件設定', class: 'btn btn-info', style: 'margin-top:10px;' %>
+          <br><br>
           <table class="table table-striped table-hover table-bordered" style='width:400px; table-layout:fixed;'>
             <thead class="thead-light">
               <tr>
@@ -20,6 +19,50 @@
                 <td class="td_vertical_align_middle"><%= value.to_s %></td>
                 <td class="td_vertical_align_middle"><%= f.text_field key, class: 'form-control' %></td>
               </tr>
+              <% end %>
+            </tbody>
+          </table>
+        <% end %>
+      </div>
+      <div class="col-lg-6">
+        <h2>アマゾン検索の設定</h2>
+        <div class="form-inline" style="margin-top:20px;">
+        <%= form_tag('/rakuten_searches/import', method:'post', multipart: true, id:"ng_import") do %>
+          <div class="form-inline">
+          <label style="vertical-align:middle;">
+            <span class="btn btn-primary" style="width:140px;">
+              一括インポート
+              <input type="file" name="ng_import" onChange="$('#ng_import').submit();" style="display:none">
+            </span>
+          </label>
+          <%= link_to 'テンプレート取得', {:controller => 'rakuten_searches', :action => 'template', :format => 'xlsx'}, {class: 'btn btn-success', id: 'import_template', style: 'margin-left: 20px;'} %>
+          </div>
+        <% end %>
+        <%= form_tag('/rakuten_searches/edit', method: 'post') do %>
+
+          <%= submit_tag '除外設定', class: 'btn btn-info', style: 'margin-left:20px;' %>
+
+          </div>
+          <br>
+          <table class="table table-striped table-hover table-bordered" style='width:400px; table-layout:fixed;'>
+            <thead class="thead-light">
+              <tr>
+                <th style='width:400px;'>設定値</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% counter = 1 %>
+              <% @amazon_search.each do |ngword| %>
+              <tr>
+                <td style='width:200%;' class="td_vertical_align_middle"><%= text_field_tag('text[' + counter.to_s + ']', ngword.ng_keyword, class: 'form-control') %></td>
+              </tr>
+              <% counter += 1 %>
+              <% end %>
+              <% (1..50).each do |num| %>
+              <tr>
+                <td class="td_vertical_align_middle"><%= text_field_tag('text[' + counter.to_s + ']','', class: 'form-control') %></td>
+              </tr>
+              <% counter += 1 %>
               <% end %>
             </tbody>
           </table>
