--- a/app/views/list_templates/setup.html.erb
+++ b/app/views/list_templates/setup.html.erb
@@ -25,7 +25,7 @@
                 <td class="td_vertical_align_middle" style='width:25%;'><%= row[2] %></td>
                 <% if @template.find_by(header: row[2]) != nil then init = @template.find_by(header: row[2]).value else init = nil end %>
                 <% if row[2] == "condition-type" then %>
-                <td class="td_vertical_align_middle" style='width:50%;'><%= select_tag 'text[' + row[2] + ']', options_for_select(["New", "UsedLikeNew", "UsedVeryGood", "UsedGood", "UsedAcceptable", "CollectibleLikeNew", "CollectibleGood", "CollectibleGood", "CollectibleAcceptable"]), class:'form-control', style:'margin-left:10px;' %></td>
+                <td class="td_vertical_align_middle" style='width:50%;'><%= select_tag 'text[' + row[2] + ']', options_for_select(["New", "UsedLikeNew", "UsedVeryGood", "UsedGood", "UsedAcceptable", "CollectibleLikeNew", "CollectibleVeryGood", "CollectibleGood", "CollectibleAcceptable"]), class:'form-control', style:'margin-left:10px;' %></td>
                 <% else %>
                 <td class="td_vertical_align_middle" style='width:50%;'><%= text_field_tag 'text[' + row[2] + ']', init, class: 'form-control' %></td>
                 <% end %>
