--- a/app/views/rakuten_searches/setup.html.erb
+++ b/app/views/rakuten_searches/setup.html.erb
@@ -1,31 +1,34 @@
 <div class="container">
   <div class="page-header" id="banner">
     <div class="row my-4">
-      <div class="col-lg-6">
+      <div class="col-lg-12">
         <h2>楽天検索条件の設定</h2>
         <%= form_for(@rakuten_search, {url: rakuten_searches_setup_path, method: 'post'}) do |f| %>
           <%= submit_tag '検索条件設定', class: 'btn btn-info', style: 'margin-top:10px;' %>
           <br><br>
-          <table class="table table-striped table-hover table-bordered" style='width:400px; table-layout:fixed;'>
+          <table class="table table-striped table-hover table-bordered" style='width:1000px; table-layout:fixed;'>
             <thead class="thead-light">
               <tr>
-                <th style='width:40%;'>項目名</th>
-                <th style='width:60%;'>設定値</th>
+                <th style='width:200px;'>項目名</th>
+                <th style='width:400px;'>設定値</th>
+                <th style='width:400px;'>説明</th>
               </tr>
             </thead>
             <tbody>
               <% @headers.each do |key, value| %>
               <tr>
-                <td class="td_vertical_align_middle"><%= value.to_s %></td>
-                <td class="td_vertical_align_middle"><%= f.text_field key, class: 'form-control' %></td>
+                <td style='width:25%;' class="td_vertical_align_middle"><%= value.to_s %></td>
+                <td style='width:35%;' class="td_vertical_align_middle"><%= f.text_field key, class: 'form-control' %></td>
+                <td style='width:40%;' class="td_vertical_align_middle"><%= @headers_info[key].html_safe %></td>
               </tr>
               <% end %>
             </tbody>
           </table>
         <% end %>
       </div>
-      <div class="col-lg-6">
-        <h2>アマゾン検索の設定</h2>
+      <div class="col-lg-12">
+        <br>
+        <h2>アマゾン検索時の除外キーワード設定</h2>
         <div class="form-inline" style="margin-top:20px;">
         <%= form_tag('/rakuten_searches/import', method:'post', multipart: true, id:"ng_import") do %>
           <div class="form-inline">
